<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TripTour</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hellow world!</string>
    <string name="login">Sign in</string>
    <string name="userLog">E-Mail or nick:</string>
    <string name="pass">Password:</string>
    <string name="newUser">New user register!!</string>
    <string name="find">Search attractions</string>
    <string name="recomendation">Recommendation attractions</string>
    <string name="recRutas">Recomendations route</string>
    <string name="alojamiento">Hotel</string>
    <string name="change">Money exchange</string>
    <string name="climate">Climate</string>
    <string name="rating">Rating attractives</string>
    <string name="preferences">Preferences</string>
    <string name="welcome">Welcome,</string>
    <string name="name">Name:</string>
    <string name="nick">Nick:</string>
    <string name="mail">E-mail</string>
    <string name="lastname">Last name:</string>
    <string name="gender">Gender:</string>
    <string name="birthday">Birthday:</string>
    <string name="password">Pasword:</string>
    <string name="confpass">Repeat password:</string>
    <string name="send">Send</string>
    <string name="female">Famale</string>
    <string name="male">Male</string>
    <string name="year">YYYY</string>
    <string name="searchResults">Search results</string>
    <string name="user">User: </string>
    <string name="dir">Address:</string>
    <string name="average">Average:</string>
    <string name="dist">Distance (KM):</string>
    <string name="map">View all</string>
    <string name="origen">Origin:</string>
    <string name="destino">destination</string>
    <string name="valor">Result:</string>
    <string name="monto">Amount</string>
    <string name="category">Select category</string>
    <string name="transport">Type of transportation:</string>
    <string name="duration">Maximum duration tour</string>
    <string name="durationTotal">Estimate time tour:</string>
    <string name="ResultRecomendation">Recomendations</string>
    <string name="ResultRoute">Routes</string>
    <string name="resultsRoute">Routes obtained:</string>
    <string name="resultsFind">Attractions obtained:</string>
    <string name="register">Register</string>
    <string name="logonSkip">Skip logon</string>
    <string name="inicio">¡Welcome!</string>
    <string name="post">Comentt</string>
    <string name="accept">Accept</string>
    <string name="searchRadius">Search radius (KM):</string>
    <string name="distMax">Maximum travel distance (KM):</string>
    <string name="sexo">Gender:</string>
    <string name="tuOpinion">Give your review</string>
    <string name="mes">MM</string>
    <string name="dia">DD</string>

</resources>
