<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item 
        android:id="@+id/find" 
        android:title="@string/find"
        android:icon="@android:drawable/ic_menu_search"
		android:showAsAction="always"     
    ></item>
    
    <item 
        android:id="@+id/menu_recomendation" 
        android:title="@string/recomendation"
        android:icon="@android:drawable/ic_menu_compass"
        android:showAsAction="always"
     >
        <menu>
            <item 
                android:id="@+id/recomendation"
                android:title="@string/recomendation" 
            />
            
            <item 
                android:id="@+id/recomendation_route"
                android:title="@string/recRutas" 
            />
        </menu>
    </item>
    
    <item 
        android:id="@+id/evaluacion" 
        android:title="@string/rating" 
        android:icon="@drawable/ic_action_half_important"
        android:showAsAction="ifRoom"
      >
    </item>
    
    <item 
        android:id="@+id/alojamiento" 
        android:title="@string/alojamiento"
        android:icon="@drawable/ic_icon_building"
        android:showAsAction="always"
      >
    </item>
    
    <item 
        android:id="@+id/clima" 
        android:title="@string/climate"
        android:icon="@drawable/ic_action_cloud"
        android:showAsAction="ifRoom"
      >
    </item>
    
    <item 
        android:id="@+id/cambio_moneda" 
        android:title="@string/change"
		android:icon="@drawable/dollar_sign"
        android:showAsAction="ifRoom"
      >  
    </item>
        
     <item 
        android:id="@+id/preferencias" 
        android:title="@string/preferences"
        android:icon="@android:drawable/ic_menu_preferences"
        android:showAsAction="ifRoom"
      >
    </item>
</menu>
