<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
xmlns:android="http://schemas.android.com/apk/res/android"
android:id="@+id/prompt"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:orientation="vertical"
android:padding="10dp"
android:background="#FFFFFF" >
 
<TextView
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/find"
android:textSize="25sp" />

<TextView
    android:id="@+id/textView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/category"
    android:textAppearance="?android:attr/textAppearanceMedium" />
 
<Spinner
 android:id="@+id/spCategoria"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 />

<TextView
    android:id="@+id/textView2"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/transport"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<Spinner
 android:id="@+id/spTransporte"
 android:layout_width="wrap_content"
 android:layout_height="wrap_content"
 />

<TextView
    android:id="@+id/textView3"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/searchRadius"
    android:textAppearance="?android:attr/textAppearanceMedium" />

<EditText
    android:id="@+id/edtRadioBusqueda"
    android:layout_width="100dp"
    android:layout_height="wrap_content"
    android:ems="3"
    android:inputType="numberDecimal" >

    <requestFocus />
</EditText>
 
</LinearLayout>