<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#FFFFFF"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/txtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtPass"
        android:layout_alignLeft="@+id/edtPass"
        android:text="@string/pass" />

    <EditText
        android:id="@+id/edtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/txtPass"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="17dp"
        android:ems="10"
        android:hint="@string/userLog" />

    <TextView
        android:id="@+id/txtUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/edtUsuario"
        android:layout_alignLeft="@+id/edtUsuario"
        android:text="@string/user" />

    <Button
        android:id="@+id/btnLogonSkip"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnRegister"
        android:layout_alignBottom="@+id/btnRegister"
        android:layout_toRightOf="@+id/btnLogin"
        android:drawable="@color/NARANJA"
        android:text="@string/logonSkip" />

    <Button
        android:id="@+id/btnRegister"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="29dp"
        android:layout_toLeftOf="@+id/textView1"
        android:drawable="@color/NARANJA"
        android:text="@string/register" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogonSkip"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:text="@string/login" />

    <EditText
        android:id="@+id/edtPass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="19dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" >

        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/inicio"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/PISTACHO" />

</RelativeLayout>